--- a/style.css
+++ b/style.css
@@ -4,18 +4,18 @@
 }
 body {
     color: white;
-    background-color: rgba(0, 0, 0, 0.619);
+    background-color: rgba(12, 82, 144, 0.981);
     text-align: center;
+
 }
 
 #board {
     height: 540px;
     width: 630px;
     
-    background-color: blue;
+    background-color: rgb(60, 60, 194);
     border: 10px solid navy;
-    
-    margin: 0 auto;
+    margin: -2% auto;
     display: flex;
     flex-wrap: wrap;
 }
@@ -25,7 +25,7 @@ body {
     width: 70px;
     margin: 5px;
 
-    background-color: white;
+    background-color: rgb(216, 211, 211);
     border-radius: 50%;
     border: 5px solid navy;
     
@@ -37,4 +37,47 @@ body {
 
 .Yellow {
     background-color: yellow;
+}
+
+.hide {
+    display: none;
+}
+
+
+
+#playAgainModal > button {
+    
+    text-align: center;
+    margin:100px ;
+    margin-top: 20%;
+    height: 60px;
+    width: 300px;
+    border-radius: 1em;
+    padding: 20px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+#winner {
+    margin-top: 5%;
+    text-align: center;
+    font-size: 50px;
+
+}
+
+h1 {
+    font-size: 75px;
+    font-family: 'Bungee Shade';
+    color: whitesmoke;
+}
+
+.show {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    z-index: 10;
+    background-color: black;
+    opacity: .9;
+    
 }
